--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,4 +6,16 @@
 
 @import "blocks/header.scss";
 
+@import "blocks/advantages.scss";
+@import "blocks/breed-features.scss";
+@import "blocks/care.scss";
+@import "blocks/faq.scss";
+@import "blocks/gallery.scss";
+@import "blocks/pets.scss";
+@import "blocks/reviews.scss";
+@import "blocks/section.scss";
+@import "blocks/slider.scss";
+@import "blocks/social.scss";
+@import "blocks/team.scss";
+
 @import "blocks/footer.scss";
