--- a/source/sass/blocks/breed-features.scss
+++ b/source/sass/blocks/breed-features.scss
@@ -1,4 +1,9 @@
 .breed-features {
 	background-color: #1f1c1d;
+	&__wrapper {
+		position: relative;
+		padding-top: 21px;
+		padding-bottom: 129px;
+	}
  }
  
