--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -1,6 +1,7 @@
 .section {
   &__title {
-    margin: 0;
+		margin: 0;
+		font-family: "Yeseva One", "Georgia", serif;
     font-style: normal;
     font-weight: normal;
     font-size: 36px;
@@ -10,11 +11,18 @@
 	}
 	&__lead {
 		margin: 0;
+		font-family: "Roboto", "Arial", sans-serif;
 		font-style: normal;
 		font-weight: 300;
 		font-size: 16px;
 		line-height: 26px;
 		text-align: center;
 		color: #a07b50;
+	}
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
 	}
 }
