--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -11,7 +11,7 @@
 	}
 	&__lead {
 		margin: 0;
-		font-family: "Roboto", "Arial", sans-serif;
+		font-family: $main-fonts;
 		font-style: normal;
 		font-weight: 300;
 		font-size: 16px;
