--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,16 +6,62 @@
 
 // }
 .footer {
-	background-color: $main-color-background;
-	&__wrapper {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: baseline;
-		flex-wrap: wrap;
-		margin: 0 auto;
-		width: 72.7%;
-		padding-top: 70px;
-		padding-bottom: 59px;
-	}
+  background-color: $main-color-background;
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 72.7%;
+    padding-top: 70px;
+    padding-bottom: 59px;
+  }
+  &__logo svg {
+    fill: #a07b50;
+    stroke: $main-color-background;
+    stroke-width: 0.8;
+    transition: fill 0.3s ease-out;
+    &:hover,
+    &:focus {
+      fill: #ffffff;
+    }
+  }
+  &__social {
+    align-self: center;
+    li {
+      margin-right: 8px;
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+    svg {
+      fill: #a07b50;
+      &:hover,
+      &:focus {
+        fill: #ffffff;
+      }
+    }
+  }
+  &__link {
+    font-family: $main-fonts;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 27px;
+    color: #ddd0c3;
+    transition: color 0.3s ease-out;
+    &--address {
+      transform: translateX(27px);
+    }
+    &--tel {
+      font-weight: bold;
+      transform: translateX(-29px);
+    }
+    &:hover,
+    &:focus {
+      color: #a07b50;
+    }
+  }
 }
