--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -6,21 +6,42 @@
   margin: 0 auto 56px;
   column-count: 2;
   column-gap: 30px;
-	padding-left: 30px;
-	&__wrapper {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
+  padding-left: 30px;
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  &__layout-column {
+    margin-right: 35px;
+  }
+  &__item {
+    flex-shrink: 1;
+    line-height: 0;
+    break-inside: avoid;
+    page-break-inside: avoid;
+    overflow: hidden;
+    width: 100%;
+    &--top {
+      margin-bottom: 30px;
+      height: 214px;
+		}
+		&--bottom {
+			height: 241px;
+		}
+		&--large {
+			width: calc(100% - 30px);
+			max-width: 474px;
+			height: 485px;
+		}
+		img {
+			line-height: 0;
+		}
 	}
-	&__layout-column {
-		margin-right: 35px;
-	}
-	&__item {
-		flex-shrink: 1;
-		line-height: 0;
-		break-inside: avoid;
-		page-break-inside: avoid;
-		overflow: hidden;
+	&__item-img {
 		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
 	}
 }
