--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -3,27 +3,56 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-	align-items: center;
-	&__container {
-		margin-left: auto;
-		margin-right: auto;
-		position: relative;
-		overflow: hidden;
-		list-style: none;
-		padding: 0;
-	}
-	&__wrapper {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		z-index: 1;
-		display: flex;
-		box-sizing: content-box;
-	}
-	&__slide {
-		flex-shrink: 0;
-		width: 100%;
-		height: 100%;
-		position: relative;
-	}
+  align-items: center;
+  &__container {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+  }
+  &__wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+  }
+  &__slide {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+  }
+  &__button {
+    z-index: 5;
+    display: block;
+    width: 14px;
+    height: 31px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    &::after {
+      display: none;
+    }
+    &--prev,
+    &--next {
+      position: absolute;
+      top: 50%;
+    }
+    &--prev {
+      left: 0;
+      background-image: url("../img/arrowPrev.svg");
+    }
+    &--next {
+      right: 0;
+      background-image: url("../img/arrowNext.svg");
+    }
+  }
 }
