--- a/source/sass/blocks/team.scss
+++ b/source/sass/blocks/team.scss
@@ -1,19 +1,135 @@
 .team {
-	background-color: $main-color-background;
-	&__wrapper-outer {
-		display: flex;
-		padding: 2px 90px 2px 90px;
+  background-color: $main-color-background;
+  &__wrapper-outer {
+    display: flex;
+    padding: 2px 90px 2px 90px;
+    img {
+      width: 360px;
+      height: auto;
+    }
+  }
+  &__wrapper {
+    display: block;
+    padding-top: 83px;
+    padding-bottom: 70px;
+  }
+  &__slider {
+    align-self: stretch;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    button {
+      width: 31px;
+      height: 31px;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0.5;
+      transition: opacity 0.3s ease-out;
+      top: 46%;
+      &:hover {
+        opacity: 1;
+      }
+      // &:first-of-type {
+      //   top: 51%;
+      //   background-image: url("../img/arrowPrev.svg");
+      // }
+      // &:last-of-type {
+      //   top: 51%;
+      //   background-image: url("../img/arrowNext.svg");
+      // }
+    }
+  }
+  &__title {
+    margin-bottom: 19px;
+  }
+  &__lead {
+    margin-bottom: 23px;
+    max-width: 505px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  // &__list {
+  //   margin: 0;
+  //   padding: 0;
+  //   list-style: none;
+  //   position: relative;
+  //   width: 100%;
+  // }
+  &__item {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: opacity 1s;
+    blockquote {
+      margin: 0;
+    }
+  }
+  &__img-wrapper {
+    z-index: 5;
+    width: 50%;
+    margin-left: 55px;
+  }
+  &__item-title {
+    display: block;
+    margin: 0 0 6px;
+    font-family: $main-fonts;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    color: #a07b50;
+  }
+  &__item-job-title {
+    margin: 0 0 23px;
+    display: block;
+    font-family: $main-fonts;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #a07b50;
+  }
+  &__item-wrapper {
+    width: 75%;
+    margin-left: -8.5%;
+    padding: 68px 98px 74px;
+    border: 22px solid $main-color-background;
+    border-right-width: 34px;
+    border-left-width: 22px;
+    background-color: #1f1c1d;
+    outline: 1px solid rgba(160, 123, 80, 0.43);
+    blockquote p {
+      margin: 0 0 46px;
+      font-family: $main-fonts;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 25px;
+      color: #ffffff;
+      opacity: 0.7;
+    }
+  }
+  &__social {
+    li {
+      margin-right: 9px;
+      &:last-of-type {
+        margin-right: 0;
+      }
+		}
+		svg {
+			fill: #ffffff;
+			&:hover,
+			&:focus {
+				fill: #a07b50;
+			}
+		}
 	}
-	&__wrapper {
-		display: block;
-		padding-top: 83px;
-		padding-bottom: 70px;
-	}
-	&__slider {
-		align-self: stretch;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-	}
+	// &__item-show {
+	// 	opacity: 1;
+	// 	z-index: 2;
+	// }
 }
